--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -17,9 +17,10 @@
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
